Fix unsafe concurrent access in KisPaintDeviceCache

Before the async layer thumbnails cache implementation was added,
the GUI thread was the only one who accessed the paint device's
cache. Now it has changed, so we should guard that with an rw-lock.

BUG:469945